# clean-code-fastapi

./: main.py  pyproject.toml
src/todoapp/context/: container.py  todo_repo.py
src/todoapp/entities/: todo.py  user.py
src/todoapp/use_cases/: todos.py
test/: conftest.py
test/use_cases/: test_todos.py
