[project]
name = "clean-code-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.39.0",
    "pytest>=9.0.2",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poe.tasks]
check = "ruff check"
type = "ty check"
test = "pytest"
